--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "if-env": "^1.0.4",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "stripe": "^8.131.1"
   },
   "devDependencies": {
